--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfólio - Seu Nome</title>
+  <title>Portfólio - Smith Braz</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -46,7 +46,7 @@
 <body>
   <header>
     <h1>Seu Nome</h1>
-    <p>Desenvolvedor Web | Designer | Criador</p>
+    <p>Military at Brazilian Navy | Cyber Warior| CyberSecurity | Head of Red Team | Threat Hunter | CTF Player</p>
     <nav>
       <a href="#sobre">Sobre</a>
       <a href="#projetos">Projetos</a>
@@ -54,6 +54,11 @@
     </nav>
   </header>
 
+  <section id="sobre">
+    <h2>Certificações</h2>
+    <p>OSCP+ | DCPT | eJPT | CC-ISC² | CNSP | AZ-900 | SC-900 | CLF-C01 | FCF | ISM</p>
+  </section>
+  
   <section id="sobre">
     <h2>Sobre mim</h2>
     <p>Breve descrição sobre você, suas habilidades e experiências.</p>
