--- a/index.html
+++ b/index.html
@@ -45,25 +45,44 @@
 </head>
 <body>
   <header>
-    <h1>Seu Nome</h1>
-    <p>Military at Brazilian Navy | Cyber Warior| CyberSecurity | Head of Red Team | Threat Hunter | CTF Player</p>
+    <h1>Smith Braz | 5M1TH</h1>
+    <p>Military at Brazilian Navy | Cyber Warior | CyberSecurity | Head of Red Team | Threat Hunter | CTF Player | Teacher</p>
     <nav>
-      <a href="#sobre">Sobre</a>
-      <a href="#projetos">Projetos</a>
-      <a href="#contato">Contato</a>
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
     </nav>
   </header>
 
   <section id="sobre">
-    <h2>Certificações</h2>
+    <h2>Sobre mim</h2>
+    <p>Professional with more than 25 years of experience in the Brazilian Navy, working in Information Technology since 2004. Specialized in offensive security, network management, and incident response, with internationally recognized certifications.</p>
+  </section>
+
+  <section id="sobre">
+    <h2>Certifications</h2>
     <p>OSCP+ | DCPT | eJPT | CC-ISC² | CNSP | AZ-900 | SC-900 | CLF-C01 | FCF | ISM</p>
+    <p>OSCP+ (Offensive Security Certified Professional);
+DCPT (Desec Certified Penetration Tester);
+eJPT (eLearn Junior Penetration Tester);
+CC-ISC² (Certified in Cybersecurity);
+CNSP (Certified Network Security Practitioner);
+AZ-900 (Microsoft Azure Fundamentals);
+SC-900 (Microsoft Security, Compliance, and Identity Fundamentals);
+CLF-C01 (AWS Certified Cloud Practitioner).
+FCF (Fortinet Certified Fundamentals Cybersecurity)
+ISO/IEC 27001 Information Security Associate(SkillFront)</p>
   </section>
   
   <section id="sobre">
-    <h2>Sobre mim</h2>
-    <p>Breve descrição sobre você, suas habilidades e experiências.</p>
+    <h2>Academic Background</h2>
+    <p>• CTS in Systems Analysis and Development (UniBF);
+• Postgraduate Student in Network Security (UniBF);
+• Postgraduate Student in Cyber Offensive e Red Team Operations (IMPACTA);
+• Post-Technical in Computer Networks (Brazilian Army);
+• Special Technical Qualification in Telematics (Brazilian Navy.</p>
   </section>
-
+  
   <section id="projetos">
     <h2>Projetos</h2>
     <div class="projeto">
