--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       max-width: 900px;
       margin: auto;
     }
-    .projeto {
+    .project {
       background: #fff;
       padding: 20px;
       margin-bottom: 20px;
@@ -54,56 +54,77 @@
     </nav>
   </header>
 
-  <section id="sobre">
-    <h2>Sobre mim</h2>
+  <section id="about">
+    <h2>About me</h2>
     <p>Professional with more than 25 years of experience in the Brazilian Navy, working in Information Technology since 2004. Specialized in offensive security, network management, and incident response, with internationally recognized certifications.</p>
   </section>
 
-  <section id="sobre">
+  <section id="certifications">
     <h2>Certifications</h2>
     <p>OSCP+ | DCPT | eJPT | CC-ISC² | CNSP | AZ-900 | SC-900 | CLF-C01 | FCF | ISM</p>
-    <p>OSCP+ (Offensive Security Certified Professional);
-DCPT (Desec Certified Penetration Tester);
-eJPT (eLearn Junior Penetration Tester);
-CC-ISC² (Certified in Cybersecurity);
-CNSP (Certified Network Security Practitioner);
-AZ-900 (Microsoft Azure Fundamentals);
-SC-900 (Microsoft Security, Compliance, and Identity Fundamentals);
-CLF-C01 (AWS Certified Cloud Practitioner).
-FCF (Fortinet Certified Fundamentals Cybersecurity)
-ISO/IEC 27001 Information Security Associate(SkillFront)</p>
+    <ul>
+    <li>OSCP+ (Offensive Security Certified Professional)</li>
+    <li>DCPT (Desec Certified Penetration Tester)</li>
+    <li>eJPT (eLearn Junior Penetration Tester)</li>
+    <li>CC-ISC² (Certified in Cybersecurity)</li>
+    <li>CNSP (Certified Network Security Practitioner)</li>
+    <li>AZ-900 (Microsoft Azure Fundamentals)</li>
+    <li>SC-900 (Microsoft Security, Compliance, and Identity Fundamentals)</li>
+    <li>CLF-C01 (AWS Certified Cloud Practitioner)</li>
+    <li>FCF (Fortinet Certified Fundamentals Cybersecurity)</li>
+    <li>ISO/IEC 27001 Information Security Associate (SkillFront)</li>
+  </ul>
   </section>
   
-  <section id="sobre">
+  <section id="academic">
     <h2>Academic Background</h2>
-    <p>• CTS in Systems Analysis and Development (UniBF);
-• Postgraduate Student in Network Security (UniBF);
-• Postgraduate Student in Cyber Offensive e Red Team Operations (IMPACTA);
-• Post-Technical in Computer Networks (Brazilian Army);
-• Special Technical Qualification in Telematics (Brazilian Navy.</p>
+    <ul>
+      <li>CTS in Systems Analysis and Development (UniBF)</li>
+      <li>Postgraduate Student in Network Security (UniBF)</li>
+      <li>Postgraduate Student in Cyber Offensive and Red Team Operations (IMPACTA)</li>
+      <li>Post-Technical in Computer Networks (Brazilian Army)</li>
+      <li>Special Technical Qualification in Telematics (Brazilian Navy)</li>
+  </ul>
+  </section>
+
+  <section id="teacher">
+    <h2>Teacher Projects</h2>
+    <h2>Holder of a teaching aptitude, working as an instructor in courses both internally and externally.
+    <ul>
+      <li>Internally:</li>
+      <li>• Computer Networks</li>
+      <li>• Linux Administration</li>
+      <li>• Workshops on topics such as networking, Wi-Fi, administration, and security</li>
+      <li> </li>
+      <li>Externally:</li>
+      <li>• Safe Internet Course for Children and Adolescents – AMN</li>
+      <li>• Red Team Course – RedScan Academy</li>
+      <li>• "Threat Hunting" Module – Postgraduate Program in Cyber Threat Intelligence – ADINT School</li>
+      <li>• Threat Hunting Analyst Course – ADINT School</li>
+    </ul>
   </section>
   
-  <section id="projetos">
+  <section id="projects">
     <h2>Projetos</h2>
-    <div class="projeto">
+    <div class="project">
       <h3>Projeto 1</h3>
       <p>Descrição do projeto, tecnologias usadas e link para ver mais.</p>
     </div>
-    <div class="projeto">
+    <div class="project">
       <h3>Projeto 2</h3>
       <p>Descrição do projeto, tecnologias usadas e link para ver mais.</p>
     </div>
   </section>
 
-  <section id="contato">
-    <h2>Contato</h2>
-    <p>Email: seuemail@exemplo.com</p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/seuperfil" target="_blank">seuperfil</a></p>
-    <p>GitHub: <a href="https://github.com/seuusuario" target="_blank">seuusuario</a></p>
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: thiago.smith.braz@gmail.com</p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/smith-braz" target="_blank">LinkedIn Smith Braz</a></p>
+    <p>GitHub: <a href="https://github.com/thiagosmith" target="_blank">GitHub Smith Braz</a></p>
   </section>
 
   <footer>
-    <p>&copy; 2026 Seu Nome - Todos os direitos reservados</p>
+    <p>&copy; 2026 Smith Braz - Todos os direitos reservados</p>
   </footer>
 </body>
 </html>
