--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
   <section id="teacher">
     <h2>Teacher Projects</h2>
-    <h2>Holder of a teaching aptitude, working as an instructor in courses both internally and externally.
+    <h2>Holder of a teaching aptitude, working as an instructor in courses both internally and externally.</h2>
     <ul>
       <li>Internally:</li>
       <li>• Computer Networks</li>
