--- a/index.html
+++ b/index.html
@@ -91,16 +91,17 @@
     <h2>Teacher Projects</h2>
     <h2>Holder of a teaching aptitude, working as an instructor in courses both internally and externally.</h2>
     <ul>
+      <li> </li>
       <li>Internally:</li>
-      <li>• Computer Networks</li>
-      <li>• Linux Administration</li>
-      <li>• Workshops on topics such as networking, Wi-Fi, administration, and security</li>
+      <li>Computer Networks</li>
+      <li>Linux Administration</li>
+      <li>Workshops on topics such as networking, Wi-Fi, administration, and security</li>
       <li> </li>
       <li>Externally:</li>
-      <li>• Safe Internet Course for Children and Adolescents – AMN</li>
-      <li>• Red Team Course – RedScan Academy</li>
-      <li>• "Threat Hunting" Module – Postgraduate Program in Cyber Threat Intelligence – ADINT School</li>
-      <li>• Threat Hunting Analyst Course – ADINT School</li>
+      <li>Safe Internet Course for Children and Adolescents – AMN</li>
+      <li>Red Team Course – RedScan Academy</li>
+      <li>"Threat Hunting" Module – Postgraduate Program in Cyber Threat Intelligence – ADINT School</li>
+      <li>Threat Hunting Analyst Course – ADINT School</li>
     </ul>
   </section>
   
