--- a/index.html
+++ b/index.html
@@ -89,15 +89,14 @@
 
   <section id="teacher">
     <h2>Teacher Projects</h2>
-    <h2>Holder of a teaching aptitude, working as an instructor in courses both internally and externally.</h2>
+    <p>Holder of a teaching aptitude, working as an instructor in courses both internally and externally.</p>
     <ul>
-      <li> </li>
-      <li>Internally:</li>
+      <p>Internally:</p>
       <li>Computer Networks</li>
       <li>Linux Administration</li>
       <li>Workshops on topics such as networking, Wi-Fi, administration, and security</li>
-      <li> </li>
-      <li>Externally:</li>
+      <p> </p>
+      <p>Externally:</p>
       <li>Safe Internet Course for Children and Adolescents – AMN</li>
       <li>Red Team Course – RedScan Academy</li>
       <li>"Threat Hunting" Module – Postgraduate Program in Cyber Threat Intelligence – ADINT School</li>
