--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
   </section>
   
   <section id="projects">
-    <h2>Projetos</h2>
+    <h2>Projects</h2>
     <div class="project">
-      <h3>Projeto 1</h3>
+      <h3>Project 1</h3>
       <p>Descrição do projeto, tecnologias usadas e link para ver mais.</p>
     </div>
     <div class="project">
-      <h3>Projeto 2</h3>
+      <h3>Project 2</h3>
       <p>Descrição do projeto, tecnologias usadas e link para ver mais.</p>
     </div>
   </section>
