--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       max-width: 900px;
       margin: auto;
     }
-    .project {
+    .talks {
       background: #fff;
       padding: 20px;
       margin-bottom: 20px;
@@ -105,15 +105,16 @@
     </ul>
   </section>
   
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="project">
-      <h3>Project 1</h3>
-      <p>Descrição do projeto, tecnologias usadas e link para ver mais.</p>
+  <section id="talks">
+    <h2>Talks</h2>
+    <div class="talks">
+      <h3>Talk in Hacking na Web Day RJ 2025</h3>
+      <p>“Red Teamers” O que são? O que comem? Onde vivem?</p>
+      <p>"Técnicas e Ferramentas Avançadas de Red Teaming: Explorando com uso de Exploits e Simulando Ameaças Reais"</p>
     </div>
-    <div class="project">
-      <h3>Project 2</h3>
-      <p>Descrição do projeto, tecnologias usadas e link para ver mais.</p>
+    <div class="talks">
+      <h3>Talk in Rio CyberSec 2025</h3>
+      <p>Red Team: Soft Skills and study environment.</p>
     </div>
   </section>
 
