--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   </section>
   
   <section id="talks">
-    <h2>Talks</h2>
+    <h2>Talks in Cybersecurity Events</h2>
     <div class="talks">
       <h3>Talk in Hacking na Web Day RJ 2025</h3>
       <p>“Red Teamers” O que são? O que comem? Onde vivem?</p>
