--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
     <p>Military at Brazilian Navy | Cyber Warior | CyberSecurity | Head of Red Team | Threat Hunter | CTF Player | Teacher</p>
     <nav>
       <a href="#about">About</a>
-      <a href="#projects">Projects</a>
+      <a href="#certifications">Certifications</a>
+      <a href="#academic">Academic Background</a>
+      <a href="#talks">Talks</a>
+      <a href="#teacher">Teacher Projects</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
