--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Smith Braz</title>
+  <title>Portfólio - Smith Braz</title>
   <style>
     body {
       font-family: 'Consolas', 'Courier New', monospace;
@@ -13,22 +13,22 @@
     }
     header {
       background: linear-gradient(90deg, #0d0d0d, #1a1a1a);
-      color: #00ff99;
+      color: #ff0000; /* vermelho */
       padding: 30px;
       text-align: center;
-      border-bottom: 2px solid #00ff99;
-      text-shadow: 0 0 10px #00ff99;
+      border-bottom: 2px solid #ff0000;
+      text-shadow: 0 0 10px #ff0000;
     }
     nav a {
-      color: #00ccff;
+      color: #ffff00; /* amarelo */
       margin: 0 15px;
       text-decoration: none;
       font-weight: bold;
       transition: color 0.3s ease, text-shadow 0.3s ease;
     }
     nav a:hover {
-      color: #ff00ff;
-      text-shadow: 0 0 8px #ff00ff;
+      color: #ff0000; /* vermelho ao passar o mouse */
+      text-shadow: 0 0 8px #ff0000;
     }
     section {
       padding: 40px;
@@ -36,10 +36,10 @@
       margin: auto;
     }
     h2 {
-      color: #00ff99;
-      border-left: 4px solid #00ff99;
+      color: #ff0000; /* vermelho */
+      border-left: 4px solid #ff0000;
       padding-left: 10px;
-      text-shadow: 0 0 8px #00ff99;
+      text-shadow: 0 0 8px #ff0000;
     }
     ul li {
       margin-bottom: 10px;
@@ -50,8 +50,8 @@
       padding: 20px;
       margin-bottom: 20px;
       border-radius: 8px;
-      border: 1px solid #00ccff;
-      box-shadow: 0 0 10px rgba(0, 204, 255, 0.5);
+      border: 1px solid #ffff00; /* amarelo */
+      box-shadow: 0 0 10px rgba(255, 255, 0, 0.5);
     }
     footer {
       background: #0d0d0d;
@@ -59,13 +59,13 @@
       text-align: center;
       padding: 15px;
       margin-top: 30px;
-      border-top: 2px solid #00ff99;
+      border-top: 2px solid #ff0000;
     }
     a {
-      color: #00ccff;
+      color: #ffff00; /* amarelo */
     }
     a:hover {
-      color: #ff00ff;
+      color: #ff0000; /* vermelho ao passar o mouse */
     }
   </style>
 </head>
