--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
     }
     header {
       background: linear-gradient(90deg, #0d0d0d, #1a1a1a);
-      color: #ff0000; /* vermelho */
+      color: #ff0000;
       padding: 30px;
       text-align: center;
       border-bottom: 2px solid #ff0000;
       text-shadow: 0 0 10px #ff0000;
     }
     nav a {
-      color: #ffff00; /* amarelo */
+      color: #ffff00;
       margin: 0 15px;
       text-decoration: none;
       font-weight: bold;
       transition: color 0.3s ease, text-shadow 0.3s ease;
     }
     nav a:hover {
-      color: #ff0000; /* vermelho ao passar o mouse */
+      color: #ff0000;
       text-shadow: 0 0 8px #ff0000;
     }
     section {
@@ -36,7 +36,7 @@
       margin: auto;
     }
     h2 {
-      color: #ff0000; /* vermelho */
+      color: #ff0000;
       border-left: 4px solid #ff0000;
       padding-left: 10px;
       text-shadow: 0 0 8px #ff0000;
@@ -50,7 +50,7 @@
       padding: 20px;
       margin-bottom: 20px;
       border-radius: 8px;
-      border: 1px solid #ffff00; /* amarelo */
+      border: 1px solid #ffff00;
       box-shadow: 0 0 10px rgba(255, 255, 0, 0.5);
     }
     footer {
@@ -62,10 +62,10 @@
       border-top: 2px solid #ff0000;
     }
     a {
-      color: #ffff00; /* amarelo */
+      color: #ffff00;
     }
     a:hover {
-      color: #ff0000; /* vermelho ao passar o mouse */
+      color: #ff0000;
     }
     /* Estilo da foto circular */
     .profile-container {
@@ -84,6 +84,25 @@
     .profile-img:hover {
       transform: scale(1.05);
       box-shadow: 0 0 25px rgba(255, 0, 0, 1);
+    }
+    /* Slideshow */
+    .slideshow-container {
+      position: relative;
+      max-width: 600px;
+      margin: 40px auto;
+      border: 2px solid #ff0000;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0 0 20px rgba(255,0,0,0.7);
+    }
+    .slide {
+      display: none;
+      width: 100%;
+    }
+    .slide img {
+      width: 100%;
+      height: auto;
+      display: block;
     }
   </style>
 </head>
@@ -129,7 +148,23 @@
       <li>ISO/IEC 27001 Information Security Associate (SkillFront)</li>
     </ul>
   </section>
-  
+
+  <!-- Slideshow de certificações -->
+  <section id="certifications-slideshow">
+    <div class="slideshow-container">
+      <div class="slide"><img src="img02.png" alt="Certification 1"></div>
+      <div class="slide"><img src="img03.png" alt="Certification 2"></div>
+      <div class="slide"><img src="img04.png" alt="Certification 3"></div>
+      <div class="slide"><img src="img05.png" alt="Certification 4"></div>
+      <div class="slide"><img src="img06.png" alt="Certification 5"></div>
+      <div class="slide"><img src="img07.png" alt="Certification 6"></div>
+      <div class="slide"><img src="img08.png" alt="Certification 7"></div>
+      <div class="slide"><img src="img09.png" alt="Certification 8"></div>
+      <div class="slide"><img src="img10.png" alt="Certification 9"></div>
+      <div class="slide"><img src="img11.png" alt="Certification 10"></div>
+    </div>
+  </section>
+
   <section id="academic">
     <h2>Academic Background</h2>
     <ul>
