--- a/index.html
+++ b/index.html
@@ -263,7 +263,10 @@
 
 <section id="contact">
   <h2>Contact</h2>
-  <p>Email: thiago.smith.braz@gmail.com</p>
+  <p>Email: thiago.smith.braz@gmail.com</p> 
+  <p>LinkedIn: <a href="https://www.linkedin.com/in/smith-braz" target="_blank">LinkedIn</a></p> 
+  <p>GitHub: <a href="https://github.com/thiagosmith" target="_blank">GitHub</a></p>
+  <p>Credly: <a href="https://www.credly.com/users/smith-braz/badges" target="_blank">Credly</a></p>
 </section>
 
 <footer>
