--- a/index.html
+++ b/index.html
@@ -248,17 +248,33 @@
 
 <section id="teacher">
   <h2>Teacher Projects</h2>
-  <p>Instructor in internal and external cybersecurity courses.</p>
+  <p>Holder of a teaching aptitude, working as an instructor in courses both internally and externally.</p>
+    <p>Internally:</p>
+    <ul>
+      <li>Computer Networks</li>
+      <li>Linux Administration</li>
+      <li>Workshops on topics such as networking, Wi-Fi, administration, and security</li>
+    </ul>
+    <p>Externally:</p>
+    <ul>
+      <li>Safe Internet Course for Children and Adolescents – AMN</li>
+      <li>Red Team Course – RedScan Academy</li>
+      <li>"Threat Hunting" Module – Postgraduate Program in Cyber Threat Intelligence – ADINT School</li>
+      <li>Threat Hunting Analyst Course – ADINT School</li>
+    </ul>
 </section>
 
 <section id="talks">
   <h2>Talks in Cybersecurity Events</h2>
-  <div class="talks">
-    <h3>Hacking na Web Day RJ 2025</h3>
-  </div>
-  <div class="talks">
-    <h3>Rio CyberSec 2025</h3>
-  </div>
+    <div class="talks">
+      <h3>Talk in Hacking na Web Day RJ 2025</h3>
+      <p>“Red Teamers” O que são? O que comem? Onde vivem?</p>
+      <p>"Técnicas e Ferramentas Avançadas de Red Teaming: Explorando com uso de Exploits e Simulando Ameaças Reais"</p>
+    </div>
+    <div class="talks">
+      <h3>Talk in Rio CyberSec 2025</h3>
+      <p>Red Team: Soft Skills and study environment.</p>
+    </div>
 </section>
 
 <section id="contact">
