--- a/index.html
+++ b/index.html
@@ -267,12 +267,12 @@
 <section id="talks">
   <h2>Talks in Cybersecurity Events</h2>
     <div class="talks">
-      <h3>Talk in Hacking na Web Day RJ 2025</h3>
+      <h3>Hacking na Web Day RJ 2025</h3>
       <p>“Red Teamers” O que são? O que comem? Onde vivem?</p>
       <p>"Técnicas e Ferramentas Avançadas de Red Teaming: Explorando com uso de Exploits e Simulando Ameaças Reais"</p>
     </div>
     <div class="talks">
-      <h3>Talk in Rio CyberSec 2025</h3>
+      <h3>Rio CyberSec 2025</h3>
       <p>Red Team: Soft Skills and study environment.</p>
     </div>
 </section>
