--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 </section>
 
 <footer>
-  <p>&copy; 2026 Smith Braz - Todos os direitos reservados</p>
+  <p>&copy; 2026 Smith Braz || 5M1TH - Todos os direitos reservados</p>
 </footer>
 
 <script>
