--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     <ul>
       <li>Computer Networks</li>
       <li>Linux Administration</li>
-      <li>Workshops on topics such as networking, Wi-Fi, administration, and security</li>
+      <li>Workshops on topics such as networking, Wi-Fi, administration, and cybersecurity</li>
     </ul>
     <p>Externally:</p>
     <ul>
@@ -268,12 +268,13 @@
   <h2>Talks in Cybersecurity Events</h2>
     <div class="talks">
       <h3>Hacking na Web Day RJ 2025</h3>
-      <p>“Red Teamers” O que são? O que comem? Onde vivem?</p>
-      <p>"Técnicas e Ferramentas Avançadas de Red Teaming: Explorando com uso de Exploits e Simulando Ameaças Reais"</p>
+      <p>Red Teamers: O que são? O que comem? Onde vivem?</p>
+      <p>Técnicas e Ferramentas Avançadas de Red Teaming: Explorando com uso de Exploits e Simulando Ameaças Reais.</p>
     </div>
     <div class="talks">
       <h3>Rio CyberSec 2025</h3>
       <p>Red Team: Soft Skills and study environment.</p>
+      <p>Red Team não é só técnica — é mentalidade, estratégia e disciplina.</p>
     </div>
 </section>
 
